# crudit

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
crudit/: __init__.py  context.py  exceptions.py  foreign_keys.py  joins.py  permissions.py  registry.py  router.py  schemas.py  signature.py  types.py  unique_constraints.py  utils.py
crudit/create/: __init__.py  config.py  endpoint.py  service.py
crudit/delete/: __init__.py  config.py  endpoint.py  service.py
crudit/list/: config.py  endpoint.py  filters.py  pagination.py  search.py  service.py  sort.py
crudit/m2m/: config.py  endpoint.py  service.py
crudit/options/: __init__.py  config.py  endpoint.py
crudit/read/: config.py  endpoint.py  service.py
crudit/reorder/: __init__.py  config.py  endpoint.py
crudit/update/: __init__.py  config.py  endpoint.py  service.py
crudite/: __init__.py  exceptions.py  joins.py  permissions.py  schemas.py  types.py
crudite/list/: config.py  endpoint.py  filters.py  pagination.py  permissions.py  search.py  sort.py
crudite/read/: config.py  endpoint.py
tests/: conftest.py  test_endpoint.py  test_joins.py  test_pagination.py  test_read_endpoint.py
tests/create/: conftest.py  test_create_endpoint.py  test_create_service.py  test_foreign_keys.py  test_unique_constraints.py
tests/delete/: conftest.py  test_delete_endpoint.py  test_delete_service.py
tests/list/: conftest.py  test_computed_fields.py  test_endpoint.py  test_filters.py  test_joins.py  test_m2m_company_permissions.py  test_multi_nesting.py  test_pagination.py  test_permissions.py  test_search.py  (+3 more)
(+25 files in other folders)
